fixed broken css

--- a/public/style.css
+++ b/public/style.css
@@ -148,7 +148,7 @@ td {
 
 .filter_group {
 	border-radius: 3px;
-	color: rgb(var(133, 150, 165);
+	color: rgb(var(133, 150, 165));
 	font-size: 1.4rem;
 	margin-bottom: 8px;
 	padding: 5px 10px;
